--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ p {
     text-align: center;
     /* vertical-align: middle; */
     padding: 10px;
-    z-index: 1;
+    /* z-index: 1; */
     position: absolute;
     bottom: 0px;
     right: 0px;
@@ -110,7 +110,7 @@ p {
     font-family: 'Vollkorn', serif;
     text-align: center;
     padding: 10px;
-    z-index: 1;
+    /* z-index: 1; */
     position: absolute;
     bottom: 0px;
     left: 0px;  
@@ -135,8 +135,9 @@ p {
 .spell-list {
     width: 100px;
     height: 100px;
-    /* position: absolute; */
-    /* bottom: 0px; */
+    z-index: 1;
+    /* position: absolute;
+    bottom: 0px; */
     /* float: right; */
     /* vertical-align: bottom; */
 
